# BazAR

./: .gitignore  Dockerfile  Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  opencv_compatibility.h
doc/: Makefile  Makefile.in
garfeild/: Makefile  Makefile.in  garfeild.pc
garfeild/.deps/: CamAugmentation.Po  CamCalibration.Po  affine_image_generator.Po  camera.Po  gradient.Po  image_class_example.Po  image_classification_forest.Po  image_classification_node.Po  image_classification_tree.Po  image_classifier.Po  ipltexture.Po  keypoint_orientation_corrector.Po  lightcollector.Po  lightmap.Po  matvec.Po  object_view.Po  planar_object_recognizer.Po  tri.Po  yape.Po
garfeild/calib/: CamAugmentation.cpp  CamCalibration.cpp
garfeild/viewsets/: planar_object_recognizer.cpp
samples/: Makefile  Makefile.in
samples/filedetect/: Makefile  Makefile.am  Makefile.in  filedetect
samples/filedetect/.deps/: filedetect-filedetect.Po
samples/fullcalib/: Makefile  Makefile.am  Makefile.in
samples/fullcalib/.deps/: fullcalib-calibmodel.Po  fullcalib-fullcalib.Po
samples/interactive/: Makefile  Makefile.am  Makefile.in  interactive  interactive.cpp
samples/interactive/.deps/: interactive-interactive.Po
samples/multicam/: Makefile  Makefile.am  Makefile.in
samples/multicam/.deps/: multicam-calibmodel.Po  multicam-multicam.Po  multicam-multigrab.Po  multigl-calibmodel.Po  multigl-multigl.Po  multigl-multigrab.Po
samples/singlecalib/: Makefile  Makefile.am  Makefile.in  augment3d  augment3d.cpp  cli  cli.cpp  singlecalib  singlecalib.cpp
samples/singlecalib/.deps/: augment3d-augment3d.Po  cli-cli.Po  singlecalib-singlecalib.Po
starter/: Makefile  Makefile.in  starter.pc
starter/.deps/: affinity.Po  growmat.Po  homography.Po  linear_algebra.Po  linear_systems.Po  ls_minimizer2.Po  ls_step_solver.Po  mcv.Po  mcvm.Po  polynom_solver.Po  projection_matrix.Po  pyrimage.Po
starter/geometry/: projection_matrix.cpp
